save before crash

--- a/app/views/dynamic_pages/profile.html.erb
+++ b/app/views/dynamic_pages/profile.html.erb
@@ -26,7 +26,11 @@
   </nav>
 
 
-  <h1> <%= @author %> profile </h1>
+  <h1> <%= @author.first_name %> <%= @author.last_name %> profile </h1>
+
+
+
+
   <p>Lol astéroïde.</p>
 
 
