--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -31,7 +31,7 @@
   <p>Lol astéroïde.</p>
 
 <% Gossip.all.each do |gossip| %>
-  <h3><%= gossip.title %></h3>
+  <h3><%= link_to (gossip.title), gossip_path(gossip.title) %></h3>
   <p><%= gossip.content %></p>
   <p><%= link_to (gossip.user.first_name), profile_path(gossip.user.first_name)%></p>
   <p><%= gossip.created_at %></p>
