THE MOTHERFUCKING FINAL COMMITT TUTUTU TUTUTUTU

--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -26,11 +26,13 @@
     </div>
   </nav>
 
-
+  <div class='text-center mt-5 mb-5'>
   <h1>Page Team</h1>
   <p>Ceci est la page à propos de l'équipe qui a développé The Gossip Project. Yay !</p>
   <p>Lol astéroïde.</p>
+  </div>
 
+<div class='container' style = 'text-center mt-5 mb-5'>
   <div class="row">
       <div class="card-deck m-3 text-center">
         <div class="card" style="width: 19rem;">
@@ -47,7 +49,7 @@
           <div class="card-body">
             <h3 class="card-title">Juliet</h3>
             <h6 class="card-subtitle mb-2 text-muted">La L qui s'est perdue</h6>
-            <p class="card-text"> Description personnalisée</p>
+            <p class="card-text"> text-center mt-5 mb-5Description personnalisée</p>
           </div>
         </div>
       </div>
@@ -62,7 +64,7 @@
         </div>
       </div>
   </div>
-
+</div>
 
 </body>
 </html>
