--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,30 +1,38 @@
 
-  <div class="jumbotron">
-    <h1 class="display-4">The Gossip Project</h1>
-    <p class="lead">Plateforme de partage de potins générés aléatoirement pour l'instant.</p>
-  </div>
-
-<div class="container align-items-center text-center mt=5 mb=5">
-<h4>Créer un Gossip</h4>
-<%= link_to "Nouveau gossip", new_gossip_path, class: "btn btn-primary mr-1"%>
+<div class="jumbotron">
+  <h1 class="display-4">The Gossip Project</h1>
+  <p class="lead">Plateforme de partage de potins générés aléatoirement pour l'instant.</p>
 </div>
 
-  <div class="container align-items-center text-center">
+<% if params[:notice] == "gossip_saved" %>
+<div class="container mx-auto">
+  <div class="alert alert-success mx-auto text-center " style= "width: 30rem;" role="alert">
+    <p>Ton potin a été enregistré !</p>
+  </div>
+</div>
+<% end %>
+
+<div class="container align-items-center text-center mt=5 mb=5">
+  <h4>Créer un Gossip</h4>
+  <%= link_to "Nouveau gossip", new_gossip_path, class: "btn btn-primary mr-1"%>
+</div>
+
+<div class="container align-items-center text-center">
   <hr>
   <h3>Les potins déjà en ligne :</h3>
-    <div class="row">
-      <% Gossip.all.each do |gossip| %>
-      <div class="card-deck m-3 text-center">
-        <div class="card" style="width: 19rem;">
-          <div class="card-body">
-            <h3 class="card-title"><%= gossip.title %></h3>
-            <h6 class="card-subtitle mb-2 text-muted"><%= gossip.created_at %></h6>
-            <p class="card-text"><%= gossip.content %></p>
-            <%= link_to (gossip.user.first_name), profile_path(gossip.user.first_name), class: "btn btn-primary mr-1"%>
-            <%= link_to ("Voir le potin"), gossip_path(gossip.title), class: "btn btn-primary ml-1"%>
-          </div>
+  <div class="row">
+    <% Gossip.all.each do |gossip| %>
+    <div class="card-deck m-3 text-center">
+      <div class="card" style="width: 19rem;">
+        <div class="card-body">
+          <h3 class="card-title"><%= gossip.title %></h3>
+          <h6 class="card-subtitle mb-2 text-muted"><%= gossip.created_at %></h6>
+          <p class="card-text"><%= gossip.content %></p>
+          <%= link_to (gossip.user.first_name), profile_path(gossip.user.first_name), class: "btn btn-primary mr-1"%>
+          <%= link_to ("Voir le potin"), gossip_path(gossip.title), class: "btn btn-primary ml-1"%>
         </div>
       </div>
-      <% end %>
     </div>
+    <% end %>
   </div>
+</div>
