--- a/app/views/static_pages/team.html.erb
+++ b/app/views/static_pages/team.html.erb
@@ -22,7 +22,7 @@
           <div class="card-body">
             <h3 class="card-title">Juliet</h3>
             <h6 class="card-subtitle mb-2 text-muted">La L qui s'est perdue</h6>
-            <p class="card-text"> text-center mt-5 mb-5Description personnalisée</p>
+            <p class="card-text">Description personnalisée</p>
           </div>
         </div>
       </div>
