--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -6,7 +6,7 @@
     <hr>
     <p> Age : <%= @author.age %> </p>
     <p> Email address : <%= @author.email %></p>
-    <p> City : <%= City.find(@author.city_id).name %> <%= City.find(@author.city_id).zip_code %> </p>
+    <p> City : <%= link_to (City.find(@author.city_id).name), city_path(City.find(@author.city_id).name)%> - <%= City.find(@author.city_id).zip_code %> </p>
     <hr>
     <p>Lol astéroïde.</p>
   </div>
