--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,13 +1,18 @@
 
 <div class="container text-center mt-5 mb-5" style ="width: 30rem;">
-  <h1> <%= @a_gossip.title %> </h1>
+  <h1> <%= @gossip.title %> </h1>
   <hr>
-  <h4><%= @a_gossip.content %> </h4>
+  <h4><%= @gossip.content %> </h4>
   <hr>
-  <h5>Auteur: <%= link_to (@a_gossip.user.first_name), profile_path(@a_gossip.user.first_name)%> </h5>
-  <h5> City: <%= link_to (City.find(@a_gossip.user.city_id).name), city_path(City.find(@a_gossip.user.city_id).name)%> - <%= City.find(@a_gossip.user.city_id).zip_code %> </h5>
-  <p><small>Publié le: <%= @a_gossip.created_at %></small> </p>
+  <h5>Auteur: <%= link_to (@gossip.user.first_name), profile_path(@gossip.user.first_name)%> </h5>
+  <h5> City: <%= link_to (City.find(@gossip.user.city_id).name), city_path(City.find(@gossip.user.city_id).name)%> - <%= City.find(@gossip.user.city_id).zip_code %> </h5>
+  <p><small>Publié le: <%= @gossip.created_at %></small> </p>
   <hr>
   <p>Lol astéroïde.</p>
+  <div class="container align-items-center text-center mt=5 mb=5">
+  <h4>Editer le Gossip</h4>
+  <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
 </div>
+</div>
+
 
