--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -29,7 +29,7 @@
           <h6 class="card-subtitle mb-2 text-muted"><%= gossip.created_at %></h6>
           <p class="card-text"><%= gossip.content %></p>
           <%= link_to (gossip.user.first_name), profile_path(gossip.user.first_name), class: "btn btn-primary mr-1"%>
-          <%= link_to ("Voir le potin"), gossip_path(gossip.title), class: "btn btn-primary ml-1"%>
+          <%= link_to ("Voir le potin"), gossip_path(gossip.id), class: "btn btn-primary ml-1"%>
         </div>
       </div>
     </div>
