--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -12,6 +12,7 @@
   <div class="container align-items-center text-center mt=5 mb=5">
   <h4>Editer le Gossip</h4>
   <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
+  <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
 </div>
 </div>
 
