--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -12,6 +12,14 @@
 </div>
 <% end %>
 
+<% if params[:notice] == "gossip_destroyed" %>
+<div class="container mx-auto">
+  <div class="alert alert-success mx-auto text-center " style= "width: 30rem;" role="alert">
+    <p>Ton potin a été supprimé !</p>
+  </div>
+</div>
+<% end %>
+
 <div class="container align-items-center text-center mt=5 mb=5">
   <h4>Créer un Gossip</h4>
   <%= link_to "Nouveau gossip", new_gossip_path, class: "btn btn-primary mr-1"%>
