--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -10,10 +10,22 @@
   <hr>
   <p>Lol astéroïde.</p>
   <div class="container align-items-center text-center mt=5 mb=5">
-  <h4>Editer le Gossip</h4>
-  <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
-  <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
+    <h4>Editer le Gossip</h4>
+    <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
+    <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
+  </div>
 </div>
+
+<div class="container text-center mt-5 mb-5" style ="width: 30rem;">
+  <%= form_for new_gossip_comment_path(@gossip.id) do |f| %>
+    <div class = "form-group">
+      <label>Commentaire</label>
+      <%= f.text_area :content, class: 'form-control' %>
+    </div>
+    <div class = "form-group">
+      <button type= "submit" class= "btn btn-primary">Ajouter</button>
+    </div>
+  <% end %>
 </div>
 
 
