--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container text-center mt-5 mb-5" style ="width: 30rem;">
   <h1> <%= @gossip.title %> </h1>
   <hr>
@@ -16,16 +15,25 @@
   </div>
 </div>
 
-<div class="container text-center mt-5 mb-5" style ="width: 30rem;">
-  <%= form_for new_gossip_comment_path(@gossip.id) do |f| %>
-    <div class = "form-group">
-      <label>Commentaire</label>
-      <%= f.text_area :content, class: 'form-control' %>
+<div class="container">
+  <div class="card" style="width: 19rem;">
+    <div class="card-body">
+      <h3 class="card-title">Commentaires</h3>
+      <% @gossip.comments.each do |comment| %>
+      <p class="card-text"> <%= comment.content %></p>
+      <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
+      <small class="card-text text-end"> <%= comment.created_at %></small> </br>
+      <%= link_to "Editer", edit_gossip_comment_path(@gossip.id), class: "btn btn-secondary mr-1"%>
+      <%= link_to "Supprimer", edit_gossip_path(@gossip.id), class: "btn btn-danger mr-1"%>
+
+      <hr>
+      <% end %>
     </div>
-    <div class = "form-group">
-      <button type= "submit" class= "btn btn-primary">Ajouter</button>
-    </div>
-  <% end %>
+  </div>
 </div>
 
-
+<div class="comment-form">
+  <hr />
+  <h3 class="subtitle is-3">Leave a reply</h3>
+  <%= render 'comments/form' %>
+</div>
