--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -1,40 +1,49 @@
-<div class="container text-center mt-5 mb-5" style ="width: 30rem;">
-  <h1> <%= @gossip.title %> </h1>
-  <hr>
-  <h4><%= @gossip.content %> </h4>
-  <hr>
-  <h5>Auteur: <%= link_to (@gossip.user.first_name), profile_path(@gossip.user.first_name)%> </h5>
-  <h5> City: <%= link_to (City.find(@gossip.user.city_id).name), city_path(City.find(@gossip.user.city_id).name)%> - <%= City.find(@gossip.user.city_id).zip_code %> </h5>
-  <p><small>Publié le: <%= @gossip.created_at %></small> </p>
-  <hr>
-  <p>Lol astéroïde.</p>
-  <div class="container align-items-center text-center mt=5 mb=5">
-    <h4>Editer le Gossip</h4>
-    <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
-    <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
-  </div>
-</div>
-
 <div class="container">
-  <div class="card" style="width: 19rem;">
-    <div class="card-body">
-      <h3 class="card-title">Commentaires</h3>
-      <p>Nombre de commentaires: <%= @gossip.comments.length %>
-      <hr>
-      <% @gossip.comments.each do |comment| %>
-      <p class="card-text"> <%= comment.content %></p>
-      <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
-      <small class="card-text text-end"> <%= comment.created_at %></small> </br>
-      <%= link_to "Editer", edit_gossip_comment_path(@gossip.id, comment.id), class: "btn btn-secondary mr-1"%>
-      <a href="/gossips/<%= @gossip.id %>/comments/<%= comment.id %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
-      <hr>
-      <% end %>
+<div class="col">
+  <div class="container text-center mt-5 mb-5" style ="width: 30rem;">
+    <h1> <%= @gossip.title %> </h1>
+    <hr>
+    <h4><%= @gossip.content %> </h4>
+    <hr>
+    <h5>Auteur: <%= link_to (@gossip.user.first_name), profile_path(@gossip.user.first_name)%> </h5>
+    <h5> City: <%= link_to (City.find(@gossip.user.city_id).name), city_path(City.find(@gossip.user.city_id).name)%> - <%= City.find(@gossip.user.city_id).zip_code %> </h5>
+    <p><small>Publié le: <%= @gossip.created_at %></small> </p>
+    <hr>
+    <p>Lol astéroïde.</p>
+    <div class="container align-items-center text-center mt=5 mb=5">
+      <h4>Editer le Gossip</h4>
+      <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
+      <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
     </div>
   </div>
 </div>
-
-<div class="comment-form">
-  <hr />
-  <h3 class="subtitle is-3">Leave a reply</h3>
-  <%= render 'comments/form' %>
+<div class="col">
+<div class="row">
+  <div class="container">
+    <div class="card" style="width: 19rem;">
+      <div class="card-body">
+        <h3 class="card-title">Commentaires</h3>
+        <p>Nombre de commentaires: <%= @gossip.comments.length %>
+        <hr>
+        <% @gossip.comments.each do |comment| %>
+        <p class="card-text"> <%= comment.content %></p>
+        <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
+        <small class="card-text text-end"> <%= comment.created_at %></small> </br>
+        <%= link_to "Editer", edit_gossip_comment_path(@gossip.id, comment.id), class: "btn btn-secondary mr-1"%>
+        <a href="/gossips/<%= @gossip.id %>/comments/<%= comment.id %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
+        <hr>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="container">
+    <div class="comment-form">
+      <hr />
+      <%= render 'comments/form' %>
+  </div>
+  </div>
+  </div>
+  </div>
 </div>
