--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -28,8 +28,14 @@
                 <hr>
                 <% @gossip.comments.each do |comment| %>
                 <p class="card-text"> <%= comment.content %></p>
-                <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
-                <small class="card-text text-end"> <%= comment.created_at %></small> </br>
+                <div class="row mb-2">
+                  <div class="col">
+                    <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
+                  </div>
+                  <div class="col">
+                    <em><small class="card-text text-end"> <%= comment.created_at %></small></em> </br>
+                  </div>
+                </div>
                 <%= link_to "Editer", edit_gossip_comment_path(@gossip.id, comment.id), class: "btn btn-secondary mr-1"%>
                 <a href="/gossips/<%= @gossip.id %>/comments/<%= comment.id %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
                 <hr>
