--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -12,7 +12,6 @@
         <hr>
         <p>Lol astéroïde.</p>
         <div class="container align-items-center text-center mt=5 mb=5">
-          <h4>Editer le Gossip</h4>
           <%= link_to "Editer le gossip", edit_gossip_path(@gossip.id), class: "btn btn-primary mr-1"%>
           <a href="<%= gossip_path(@gossip.id) %>" class= "btn btn-danger mr-1" data-confirm ="Etes-vous sûr ?" data-method="DELETE">Supprimer</a>
         </div>
@@ -33,7 +32,7 @@
                     <small class="card-text text-end"> <%= comment.user.first_name %> <%= puts " " %> <%= comment.user.last_name %></small> </br>
                   </div>
                   <div class="col">
-                    <em><small class="card-text text-end"> <%= comment.created_at %></small></em> </br>
+                    <em><small class="card-text text-end"> <%= comment.created_at %></small></em> <br>
                   </div>
                 </div>
                 <%= link_to "Editer", edit_gossip_comment_path(@gossip.id, comment.id), class: "btn btn-secondary mr-1"%>
