--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -7,7 +7,7 @@
         <h4><%= @gossip.content %> </h4>
         <hr>
         <h5>Auteur: <%= link_to (@gossip.user.first_name), profile_path(@gossip.user.first_name)%> </h5>
-        <h5> City: <%= link_to (City.find(@gossip.user.city_id).name), city_path(City.find(@gossip.user.city_id).name)%> - <%= City.find(@gossip.user.city_id).zip_code %> </h5>
+        <h5> City: <%= link_to (@gossip_city[:name]), city_path(@gossip_city[:id])%> - <%= @gossip_city[:zip_code] %> </h5>
         <p><small>Publié le: <%= @gossip.created_at %></small> </p>
         <hr>
         <p>Lol astéroïde.</p>
